# music-tray

./: Cargo.toml  README.md  README_CN.md
src/: main.rs  music.rs
