[package]
name = "music-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
mpris = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
viuer = "0.7"
tempfile = "3.0"
log = "0.4"
env_logger = "0.10"

