[package]
name = "music-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
mpris = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ratatui-image = "8.0.1"
tempfile = "3.0"
log = "0.4"
env_logger = "0.10"
urlencoding = "2.1"
fs = "0.0.5"

